--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "lucide-react": "^0.344.0",
+    "mixpanel-browser": "^2.49.0",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
     "ra-data-simple-rest": "^4.16.12",
@@ -42,6 +43,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
